<resources>
    <string name="app_name">СПИСОКЪ</string>
    <string name="signIn">ВХОД</string>
    <string name="signOut">ВЫХОД</string>
    <string name="groups">ГРУППЫ</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="enterGroupName">Имя группы</string>
    <string name="joinGroup">ВОЙТИ В ГРУППУ</string>
    <string name="notLoggedYet">ВЫ ЕЩЕ НЕ ВОШЛИ!</string>
    <string name="addOftenProduct">ЧАСТЫЕ ПРОДУКТЫ</string>
    <string name="enterProductName">Название продукта</string>
    <string name="add">ДОБАВИТЬ</string>
    <string name="backToMainPage">НА ГЛАВНУЮ</string>
    <string name="successful">Успешно!</string>


    <string name="groupNameMustNotBeEmpty">Укажите имя группы!</string>
    <string name="youMustBeLogged">Пожалуйста, войдите в свой аккаунт!</string>

</resources>