<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvToolbarGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/baloo_cyrillic"
        android:gravity="center_horizontal"
        android:text="@string/groups"
        android:textColor="#A2D230"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ibtnToolbarGroups"
        app:layout_constraintStart_toStartOf="@+id/ibtnToolbarGroups"
        app:layout_constraintTop_toBottomOf="@+id/ibtnToolbarGroups" />

    <View
        android:id="@+id/bottomToolbarDivider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtnToolbarGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/bottomToolbarDivider"
        app:layout_constraintStart_toStartOf="@+id/bottomToolbarDivider"
        app:layout_constraintTop_toBottomOf="@+id/bottomToolbarDivider"
        app:srcCompat="@drawable/baseline_groups_56" />

    <ImageButton
        android:id="@+id/ibtnToolbarSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ibtnToolbarGroups"
        app:layout_constraintEnd_toStartOf="@+id/ibtnToolbarGroups"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibtnToolbarGroups"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_login_56" />

    <ImageButton
        android:id="@+id/ibtnToolbarSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ibtnToolbarGroups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibtnToolbarGroups"
        app:layout_constraintTop_toTopOf="@+id/ibtnToolbarGroups"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_logout_56" />

    <TextView
        android:id="@+id/tvToolbarSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo_cyrillic"
        android:gravity="center_horizontal"
        android:text="@string/signIn"
        android:textColor="#A2D230"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ibtnToolbarSignIn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ibtnToolbarSignIn"
        app:layout_constraintTop_toBottomOf="@+id/ibtnToolbarSignIn" />

    <TextView
        android:id="@+id/tvToolbarSignOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/baloo_cyrillic"
        android:gravity="center_horizontal"
        android:text="@string/signOut"
        android:textColor="#A2D230"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ibtnToolbarSignOut"
        app:layout_constraintStart_toStartOf="@+id/ibtnToolbarSignOut"
        app:layout_constraintTop_toBottomOf="@+id/ibtnToolbarSignOut" />
</androidx.constraintlayout.widget.ConstraintLayout>